correct size of cake cards in ourcakes.html to fit both price and order now button in gap in bootstrap media query approx 992px - 1200px. craeted order now button modal for user to select size and number of cakes to order. still working on functionality. created array of objects to house cake names and prices which will then be plugged into modal based on which order button is clicked. Modal to lead to checkout.html which is yet to be completed.

--- a/custom-css.css
+++ b/custom-css.css
@@ -78,4 +78,12 @@ ul {
   .navbar-brand {
     display: none;
   }
+/* fix gap in bootstrap media breakpoints so price and 'order now button appear on same line' */
+  .col-sm-6 {
+    min-width: 270px;
+  }
+
+  .card-deck {
+    justify-content: space-evenly;
+  }
 }
